tests/invalid/function/type_forall_fn_value_bound_unknown_trait.facet
fn id<T>(x: affine T) -> affine T {
  x
}

fn main() -> affine isize {
  let f: unrestricted for<T> fn(affine T) -> affine T where T: Missing = id in
  (f 1)
}
